fix: update text alignment and height for h3 in CommentCard

--- a/client/src/pages/HomePage/Comments/CommentCard/index.module.scss
+++ b/client/src/pages/HomePage/Comments/CommentCard/index.module.scss
@@ -11,9 +11,9 @@
     gap: 8px;
 
     h3 {
-      text-align: justify;
+      text-align: start;
       width: 100%;
-      height: 44px;
+      height: 48px;
       display: -webkit-box;
       overflow: hidden;
       text-overflow: ellipsis;
